refactor: update ResponseEntity usage and align ID types to Long