@@ -3,39 +3,58 @@ package com.wasup.mytasks.service;
 import com.wasup.mytasks.model.ModelUtils;
 import com.wasup.mytasks.model.dto.TaskDTO;
 import com.wasup.mytasks.model.entity.Task;
-import com.wasup.mytasks.model.entity.User;
 import com.wasup.mytasks.repository.TaskRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import java.net.URI;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class TaskService {
 
     private final TaskRepository taskRepository;
     private final UserService userService;
 
-    public TaskDTO createTask(TaskDTO taskDTO) {
+    public ResponseEntity<TaskDTO> createTask(TaskDTO taskDTO) {
+        if (!userService.existsById(taskDTO.getUserId())) {
+            log.atError().addArgument(taskDTO::getUserId).log("No user with userId -> {} found");
+            return ResponseEntity.badRequest().body(null);
+        }
         Task savedTask = taskRepository.save(ModelUtils.convertToEntity(taskDTO, Task.class));
         taskDTO.setId(savedTask.getId());
-        if (ModelUtils.validateTask(savedTask, taskDTO)){
-            return taskDTO;
+        if (!ModelUtils.validateTask(savedTask, taskDTO)) {
+            log.atError()
+                    .addArgument(taskDTO::toString)
+                    .addArgument(savedTask::toString)
+                    .log("Problem when validating task saved and requested\ntaskDTO:\n\t{}\nsavedtask:\n\t{}");
+            return ResponseEntity.internalServerError().build();
         }
-        return null;
+        log.atInfo()
+                .addArgument(taskDTO::getId)
+                .addArgument(taskDTO::getUserId)
+                .log("Task {} created successfully for user {}");
+        return ResponseEntity.created(URI.create("")).body(taskDTO);
     }
 
-    public List<TaskDTO> getTasksByUserId(Long userId) {
-        User user = userService.findUserEntityById(userId);
-        List<Task> tasks = taskRepository.findByUserIdOrderByDateDesc(user);
-        return tasks.stream().map(task -> ModelUtils.convertToDto(task, TaskDTO.class)).collect(Collectors.toList());
+    public ResponseEntity<List<TaskDTO>> getTasksByUserId(Long userId) {
+        if (!userService.existsById(userId)) {
+            log.atError().addArgument(userId).log("No user with userId -> {} found");
+            return ResponseEntity.badRequest().body(Collections.emptyList());
+        }
+        List<Task> tasks = taskRepository.findByUser_IdOrderByDateDesc(userId);
+        List<TaskDTO> taskDTOs = tasks.stream().map(task -> ModelUtils.convertToDto(task, TaskDTO.class)).toList();
+        return ResponseEntity.ok(taskDTOs);
     }
 
-    public TaskDTO getTaskById(Long id) {
+    public ResponseEntity<TaskDTO> getTaskById(Long id) {
         return taskRepository.findById(id)
-                .map(task -> ModelUtils.convertToDto(task, TaskDTO.class))
-                .orElseThrow(() -> new RuntimeException("Task not found"));
+                .map(task -> ResponseEntity.ok(ModelUtils.convertToDto(task, TaskDTO.class)))
+                .orElse(ResponseEntity.notFound().build());
     }
 }
